--- a/Cyble/Cyble/src/main/AndroidManifest.xml
+++ b/Cyble/Cyble/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity
             android:name=".DeviceControlActivity"
             android:label="@string/title_activity_device_control"
-            android:parentActivityName="MainActivity" >
+            android:parentActivityName="MainActivity"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
